fix broken links reported by link checker

--- a/examples/carousel/carousel-1/carousel-1.html
+++ b/examples/carousel/carousel-1/carousel-1.html
@@ -495,7 +495,7 @@
       <section>
         <h2>Javascript and CSS Source Code</h2>
         <ul>
-          <li>CSS: <a href="../css/carousel.css" type="text/css">carousel.css</a></li>
+          <li>CSS: <a href="css/carousel.css" type="text/css">carousel.css</a></li>
           <li>Javascript: <a href="js/carousel.js" type="text/javascript">carousel.js</a></li>
           <li>Javascript: <a href="js/carouselItem.js" type="text/javascript">carouselItem.js</a></li>
           <li>Javascript: <a href="js/carouselButtons.js" type="text/javascript">carouselButtons.js</a></li>
