fix broken links reported by link checker (pull #984)

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -561,7 +561,7 @@
             A label that changes when the button is activated clearly communicates both that slide content can change automatically and when it is doing so. 
             Note that since the label changes, the rotation control does not have any states, e.g., <code>aria-pressed</code>, specified.
           </li>
-          <li>Each slide container has role <a href="#group" class="role-reference">group</a> with the property <a href="aria-roledescription" class="property-reference">aria-roledescription</a> set to <code>slide</code>.</li>
+          <li>Each slide container has role <a href="#group" class="role-reference">group</a> with the property <a href="#aria-roledescription" class="property-reference">aria-roledescription</a> set to <code>slide</code>.</li>
           <li>Each slide has an accessible name:
             <ul>
               <li>
