typo fix for Sri's last name

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -5006,7 +5006,7 @@
     		<h3>Participants active in the ARIA Authoring Practices Task Force</h3>
     		<ul>
     			<li>Ann Abbott (Invited Expert)</li>
-    			<li>Shirisha Belusani (Microsoft Corporation)</li>
+    			<li>Shirisha Balusani (Microsoft Corporation)</li>
     			<li>Curt Bellew (Oracle)</li>
     			<li>Michiel Bijl (Invited Expert)</li>
     			<li>Michael Cooper (W3C)</li>
