updated keyboard behavior for opeing the datepicker

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -202,7 +202,7 @@
 
     <section>
       <h3 id="kbd_label_1">Combobox</h3>
-      <table aria-labelledby="kbd_label_1" class="def">
+      <table aria-labelledby="kbd_label_1 kbd_label" class="def">
         <thead>
           <tr>
             <th>Key</th>
@@ -225,7 +225,7 @@
 
     <section>
       <h3 id="kbd_label_2">Button (Open Date Picker)</h3>
-      <table aria-labelledby="kbd_label_2" class="def">
+      <table aria-labelledby="kbd_label_2 kbd_label" class="def">
         <thead>
           <tr>
             <th>Key</th>
@@ -248,7 +248,7 @@
 
     <section>
       <h3 id="kbd_label_3">Dialog (Date Picker)</h3>
-      <table aria-labelledby="kbd_label_3" class="def">
+      <table aria-labelledby="kbd_label_3 kbd_label" class="def">
         <thead>
           <tr>
             <th>Key</th>
@@ -284,7 +284,7 @@
 
     <section>
       <h3 id="kbd_label_4">Button (Next/Previous Month and Year)</h3>
-      <table aria-labelledby="kbd_label_4" class="def">
+      <table aria-labelledby="kbd_label_4 kbd_label" class="def">
         <thead>
           <tr>
             <th>Key</th>
@@ -304,7 +304,7 @@
 
     <section>
       <h3 id="kbd_label_5">Grid (Days in Month)</h3>
-      <table aria-labelledby="kbd_label_5" class="def">
+      <table aria-labelledby="kbd_label_5 kbd_label" class="def">
         <thead>
           <tr>
             <th>Key</th>
@@ -404,7 +404,7 @@
 
     <section>
         <h3 id="kbd_label_6">Buttons (OK and Cancel)</h3>
-        <table aria-labelledby="kbd_label_6" class="def">
+        <table aria-labelledby="kbd_label_6 kbd_label" class="def">
           <thead>
             <tr>
                 <th>Key</th>
@@ -430,7 +430,7 @@
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
     <section>
       <h3 id="rps_label_1">Combobox</h3>
-      <table aria-labelledby="rps_label_1" class="data attributes">
+      <table aria-labelledby="rps_label_1 rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -501,7 +501,7 @@
 
     <section>
         <h3 id="rps_label_2">Button (Open Date Picker)</h3>
-        <table aria-labelledby="rps_label_2" class="data attributes">
+        <table aria-labelledby="rps_label_2 rps_label" class="data attributes">
           <thead>
             <tr>
               <th scope="col">Role</th>
@@ -559,7 +559,7 @@
 
       <section>
           <h3 id="rps_label_3">Dialog (Date Picker)</h3>
-          <table aria-labelledby="rps_label_3" class="data attributes">
+          <table aria-labelledby="rps_label_3 rps_label" class="data attributes">
             <thead>
               <tr>
                 <th scope="col">Role</th>
@@ -601,7 +601,7 @@
 
       <section>
           <h3 id="rps_label_4">Buttons (Next/Previous Month and Year)</h3>
-          <table aria-labelledby="rps_label_4" class="data attributes">
+          <table aria-labelledby="rps_label_4 rps_label" class="data attributes">
             <thead>
               <tr>
                 <th scope="col">Role</th>
@@ -659,7 +659,7 @@
 
         <section>
             <h3 id="rps_label_5">Grid (Days in Month)</h3>
-            <table aria-labelledby="rps_label_5" class="data attributes">
+            <table aria-labelledby="rps_label_5 rps_label" class="data attributes">
               <thead>
                 <tr>
                   <th scope="col">Role</th>
