updated date picker example to support keyboard announcements

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -71,6 +71,8 @@
           </button>
         </div>
 
+        <div class="message" role="status"></div>
+
         <div id="myDatepickerDialog"
              class="datepickerDialog"
              role="dialog"
