added down arrow key

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -59,12 +59,14 @@
           <input type="text"
                 placeholder="mm/dd/yyyy"
                 id="id-date-1"
+                aria-expanded="false"
                 aria-controls="id-datepicker-1">
-
+          <img src="images/down-arrow-gray.png" alt="">
           <button class="icon"
             tabIndex="-1"
             aria-label="Pick a date"
             aria-haspopup="true"
+            aria-expanded="false"
             title="Select to change date"
             >
             <span class="fa fa-calendar-alt fa-2x"></span>
