--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1102,10 +1102,11 @@
             <ul>
               <li>The text field receives keyboard focus.</li>
               <li>The text field or down icon is touched.</li>
-              <ul class="note">
-                <li>If the text field is touched when the dialog is not open, only open the dialog, DO NOT focus the text field. If the text field is touched when the dialog is open, focus the text field. This should prevent unwanted display of the keyboard.</li>
-              </ul>
+              <p class="note">
+                If the text field is touched when the dialog is not open, only open the dialog, DO NOT focus the text field. If the text field is touched when the dialog is open, focus the text field. This should prevent unwanted display of the keyboard.
+              </p>
               <li>The text field or down icon is clicked with a mouse. Clicking the text field should, as is normally expected, focus the text field.</li>
+              </ul>
             </ul>
             <li>Close the dialog when:</li>
             <ul>
@@ -1119,7 +1120,7 @@
           </ul>
           <li>Move keyboard focus into the dialog when:</li>
           <ul>
-            <li>Focus is in the text field and <kbd>Up</kbd> or <kbd>Down</kbd> arrow is pressed.</li>
+            <li>Focus is in the text field and <kbd>Up Arrow</kbd> or <kbd>Down Arrow</kbd> is pressed.</li>
             <li>The user clicks or touches in the dialog.</li>
           </ul>
           <li>A set of select boxes for month, day, and year.</li>
