toolbar get focus on click

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -50,7 +50,7 @@
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
-      <div class="format" role="toolbar" aria-label="Text Formatting" aria-controls="textarea1">
+      <div class="format" role="toolbar" aria-label="Text Formatting" aria-controls="textarea1" tabindex="1">
           <div class="group characteristics">
             <button
                 class="item bold"
