Add menuitem to list of roles that require all children to be presentational (see issue 989)

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4938,6 +4938,7 @@
       <li>checkbox</li>
       <li>img</li>
       <li>math</li>
+      <li>menuitem</li>
       <li>menuitemcheckbox</li>
       <li>menuitemradio</li>
       <li>option</li>
