updated code to improve color contrast and button positioning

--- a/examples/carousel/carousel-1/carousel-1.html
+++ b/examples/carousel/carousel-1/carousel-1.html
@@ -116,7 +116,7 @@
                       </h3>
 
                       <div class="hidden-xs hidden-sm">
-                        <p>7 pm Tuesday, March 3, on TV</p>
+                        <p><span class="contrast">7 pm Tuesday, March 3, on TV</span></p>
                       </div>
                     </div>  <!-- .carousel-caption -->
                   </div>   <!-- .item -->
@@ -138,7 +138,7 @@
                       </h3>
 
                       <div>
-                        <p>Sept. 14 to Sept. 24 or 27</p>
+                        <p><span class="contrast">Sept. 14 to Sept. 24 or 27</span></p>
                       </div>
                     </div>  <!-- .carousel-caption -->
                   </div>   <!-- .item -->
@@ -182,7 +182,7 @@
                       </h3>
 
                       <div>
-                        <p>8 pm Sunday, March 8, on TV: Sneak peak at the final season.</p>
+                        <p><span class="contrast">8 pm Sunday, March 8, on TV: Sneak peak at the final season.</span></p>
                       </div>
                     </div>  <!-- .carousel-caption -->
                   </div>   <!-- .item -->
@@ -223,7 +223,7 @@
                       </h3>
 
                       <div class="hidden-xs hidden-sm">
-                        <p>Watch the latest episodes.</p>
+                        <p><span class="contrast">Watch the latest episodes.</span></p>
                       </div>
                     </div>  <!-- .carousel-caption -->
                   </div>   <!-- .item -->
