--- a/examples/carousel/carousel-1/carousel-1.html
+++ b/examples/carousel/carousel-1/carousel-1.html
@@ -67,8 +67,11 @@
                     <polygon class="play" points="22 20 22 40 43 28"
                         stroke="transparent" fill="transparent" stroke-width="2" />
 
-                    <polygon class="disabled" points="24 24 24 34 36 34 36 24 24 24"
-                        stroke="transparent" fill="trasparent" stroke-width="8" />
+                    <polygon class="disabled" points="15 15 19 15 45 45 42 45"
+                        stroke="transparent" fill="trasparent" stroke-width="1" />
+
+                    <polygon class="disabled" points="45 15 42 15 19 45 15 45"
+                        stroke="transparent" fill="trasparent" stroke-width="1" />
 
                   </svg>
                 </button>
@@ -155,7 +158,7 @@
 
                       <h3>
                         <a href="#" id="carousel-label-3">
-                          Survey confirms that TV  is America&#8217;s most trusted institution
+                          Great Children's Programming on Public TV
                         </a>
                       </h3>
 
