updated code for down arrow in textbox

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -61,7 +61,7 @@
                 id="id-date-1"
                 aria-expanded="false"
                 aria-controls="id-datepicker-1">
-          <img src="images/down-arrow-gray.png" alt="" style="visibility: hidden">
+          <span class="downarrow"></span>
           <button class="icon"
             tabIndex="-1"
             aria-label="Pick a date"
